--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate"
     },
     "dependencies": {
         "@babel/parser": "^7.28.4",
@@ -50,6 +52,7 @@
         "@tsparticles/slim": "^3.8.1",
         "atmn": "^0.0.24",
         "autumn-js": "^0.1.34",
+        "@noble/hashes": "^1.5.0",
         "bcrypt": "^6.0.0",
         "better-auth": "^1.3.10",
         "class-variance-authority": "^0.7.1",
@@ -60,6 +63,7 @@
         "dotted-map": "^2.2.3",
         "drizzle-kit": "^0.31.4",
         "drizzle-orm": "^0.44.5",
+        "ioredis": "^5.4.1",
         "embla-carousel-auto-scroll": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
@@ -71,6 +75,7 @@
         "mini-svg-data-uri": "^1.4.4",
         "motion": "^12.23.12",
         "motion-dom": "^12.23.12",
+        "jose": "^5.9.6",
         "next": "15.3.5",
         "next-themes": "^0.4.6",
         "qss": "^3.0.0",
@@ -91,6 +96,7 @@
         "simplex-noise": "^4.0.3",
         "sonner": "^2.0.6",
         "stripe": "^18.5.0",
+        "pg": "^8.13.1",
         "swiper": "^12.0.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
