--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "next start",
         "lint": "next lint",
         "db:generate": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 drizzle-kit generate",
-        "db:migrate":  "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 drizzle-kit migrate"
+        "db:migrate": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 drizzle-kit migrate"
     },
     "dependencies": {
         "@babel/parser": "^7.28.4",
@@ -111,6 +111,7 @@
         "@eslint/eslintrc": "^3.3.1",
         "@tailwindcss/postcss": "^4",
         "@types/node": "^20",
+        "@types/pg": "^8.15.5",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@types/react-syntax-highlighter": "^15.5.13",
