--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "seed": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/seed.js",
         "db:generate": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 drizzle-kit generate",
         "db:migrate": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 drizzle-kit migrate"
     },
