--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,12 @@
-# Contoh konfigurasi untuk pengembangan lokal
-DATABASE_URL=postgres://user:pass@host:5432/db
-RESEND_API_KEY=re_***
-EMAIL_TO=yessikurniawan@urusmerek.id
+NEXT_PUBLIC_MAINTENANCE_MODE=
+NODE_ENV=
+DATABASE_URL=
+REDIS_URL=
+JWT_SECRET=
+APP_URL=
+LOG_LEVEL=
+IP_HASH_SALT=
+RESEND_API_KEY=
+EMAIL_TO=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
