--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --turbopack",
+        "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 PORT=4000 next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
