--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,5 @@ RESEND_API_KEY=re_LL469Kdr_5xBvHYEF9p3kmtJ1WRSUtzJd
 EMAIL_TO=yessikurniawan@urusmerek.id
 ADMIN_EMAIL=admin@urusmerek.id
 ADMIN_PASSWORD=Soho19soho19
+NEXT_PUBLIC_GA_ID=G-XXXXXXX
+NEXT_PUBLIC_META_PIXEL_ID=YOUR_PIXEL_ID
